forge/tests/fixtures/outputs/gcc_errors.txt
main.cpp: In function 'int main()':
main.cpp:10:5: error: 'x' was not declared in this scope
   10 |     x = 5;
      |     ^
main.cpp:15:5: error: expected ';' before 'y'
   15 |     int y = 10
      |     ^~~
      |     ;
main.cpp:20:12: error: invalid conversion from 'int' to 'const char*' [-fpermissive]
   20 |     foo(42);
      |            ^
      |            |
      |            int
